Ajustes de namespaces e criação de Application Layer

--- a/src/VelzonModerna/Views/Contato/Create.cshtml
+++ b/src/VelzonModerna/Views/Contato/Create.cshtml
@@ -18,14 +18,14 @@
             <partial name="_edit_e_create" model="Model" />
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-success">Voltar à Lista</a>
 </div>
 
 @section Scripts {
