--- a/src/VelzonModerna/Views/Contato/Edit.cshtml
+++ b/src/VelzonModerna/Views/Contato/Edit.cshtml
@@ -19,14 +19,14 @@
 
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-success">Voltar à Lista</a>
 </div>
 
 @section Scripts {
