--- a/src/VelzonModerna/Views/Fornecedor/Create.cshtml
+++ b/src/VelzonModerna/Views/Fornecedor/Create.cshtml
@@ -5,7 +5,6 @@
 }
 
 
-
 <h4>Adicionar Fornecedor</h4>
 <hr />
 <div class="row">
@@ -25,7 +24,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Voltar para a lista</a>
+    <a asp-action="Index" class="btn btn-outline-success">Voltar à lista</a>
 </div>
 
 @section Scripts {
