--- a/src/VelzonModerna/Views/Pedido/Create.cshtml
+++ b/src/VelzonModerna/Views/Pedido/Create.cshtml
@@ -33,14 +33,14 @@
                 <span asp-validation-for="StatusDoPedido" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-success">Voltar à Lista</a>
 </div>
 
 @section Scripts {
