--- a/src/VelzonModerna/Views/Pedido/Delete.cshtml
+++ b/src/VelzonModerna/Views/Pedido/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model GeneralLabSolutions.Domain.Entities.Pedido
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir Produto";
 }
 
-<h1>Delete</h1>
+<h3>Excluir Produto</h3>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja excluir este registro?</h3>
 <div>
-    <h4>Pedido</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -39,7 +38,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-outline-danger" /> 
+        <a asp-action="Index" class="btn btn-outline-success">Voltar à Lista</a>
     </form>
 </div>
