--- a/src/VelzonModerna/Views/Pedido/Edit.cshtml
+++ b/src/VelzonModerna/Views/Pedido/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GeneralLabSolutions.Domain.Entities.Pedido
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Pedido";
 }
 
-<h1>Edit</h1>
+<h1>Editar Pedido</h1>
 
 <h4>Pedido</h4>
 <hr />
@@ -35,14 +35,14 @@
 
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-success">Voltar à Lista</a>
 </div>
 
 @section Scripts {
