--- a/src/VelzonModerna/Views/Produto/Delete.cshtml
+++ b/src/VelzonModerna/Views/Produto/Delete.cshtml
@@ -1,20 +1,19 @@
 ﻿@model GeneralLabSolutions.Domain.Entities.Produto
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir Produto";
 }
 
-<h1>Delete</h1>
+<h3>Excluir Produto</h3>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja excluir este registro?</h3>
 <div>
-    <h4>Produto</h4>
     <hr />
      <partial name="_details_e_delete" model="Model" />
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-outline-danger" />
+        <a asp-action="Index" class="btn btn-outline-success">Voltar à Lista</a>
     </form>
 </div>
