--- a/src/VelzonModerna/Views/Produto/Edit.cshtml
+++ b/src/VelzonModerna/Views/Produto/Edit.cshtml
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="card-header align-items-center d-flex">
                 <h4 class="card-title mb-0 flex-grow-1"> <strong>Produto >> @Model.Descricao.ToUpper() </strong></h4>
-            </div><!-- end card header -->
+            </div>
 
             <div style="padding: 20px;">
                 <form asp-action="Edit">
