--- a/src/VelzonModerna/Views/Vendedor/Delete.cshtml
+++ b/src/VelzonModerna/Views/Vendedor/Delete.cshtml
@@ -1,14 +1,12 @@
 ﻿@model GeneralLabSolutions.Domain.Entities.Vendedor
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir Vendedor";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja excluir este registro?</h3>
 <div>
-    <h4>Vendedor</h4>
+    <h3>Excluir Vendedor</h3>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -45,7 +43,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" /> 
+        <a asp-action="Index" class="btn btn-outline-success">Listagem</a>
     </form>
 </div>
