--- a/src/VelzonModerna/Views/Vendedor/Details.cshtml
+++ b/src/VelzonModerna/Views/Vendedor/Details.cshtml
@@ -1,13 +1,11 @@
 ﻿@model GeneralLabSolutions.Domain.Entities.Vendedor
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes do Vendedor";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Vendedor</h4>
+    <h3>Detalhes do Vendedor</h3>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -43,6 +41,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> 
+    <a asp-action="Index" class="btn btn-outline-success">Listagem</a>
 </div>
