Fixed many features in solutions

--- a/src/VelzonModerna/Views/ConsolidadoFornecedor/ConsolidadoResult.cshtml
+++ b/src/VelzonModerna/Views/ConsolidadoFornecedor/ConsolidadoResult.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GeneralLabSolutions.Domain.Enums
-@using GeneralLabSolutions.Domain.Extensions.Helpers.Dtos.DtosConsolidados
+@using GeneralLabSolutions.Domain.DTOs.DtosConsolidados
 @model FornecedorConsolidadoDto
 
 @{
