--- a/src/VelzonModerna/Views/Shared/Components/CardResumoPedido/Default.cshtml
+++ b/src/VelzonModerna/Views/Shared/Components/CardResumoPedido/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GeneralLabSolutions.Domain.Extensions.Helpers;
-@using GeneralLabSolutions.Domain.Extensions.Helpers.Dtos.DtosViewComponents
+@using GeneralLabSolutions.Domain.DTOs.DtosViewComponents
 @model CardPedidoViewModel
 
 <div class="col-xm-12 col-sm-6 col-md-3 col-lg-3">
