Add Agendamento ainda com erros

--- a/src/VelzonModerna/Views/Shared/_sidebar.cshtml
+++ b/src/VelzonModerna/Views/Shared/_sidebar.cshtml
@@ -442,6 +442,10 @@
                             </li>
 
                             <li class="nav-item">
+                                <a href="@Url.Action("Index", "Agendamento")" class="nav-link"> Agendamentos</a>
+                            </li>
+
+                            <li class="nav-item">
                                 <a href="@Url.Action("Index", "QuadroKanban")" class="nav-link"> Kanban Experience</a>
                             </li>
 
